cmd/pkg/ingestor/suite/testdata/referential-data/samples/require-namespace-network-policies/example_allowed_network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: require-namespace-network-policies-example
