cmd/pkg/ingestor/suite/testdata/referential-data/samples/require-namespace-network-policies/example_disallowed_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: require-namespace-network-policies-example
